# uwm-cs760-hw5

./: pyproject.toml
doc/: hw5.tex
src/hw5/: 1_2.py  2_3.py  gmm.py  k_means.py  pca.py
