[tool.poetry]
name = "hw5"
version = "0.1.0"
description = ""
authors = ["Mondo <mondo.jiang@wisc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
